--- a/bloomberg-terminal/src/index.css
+++ b/bloomberg-terminal/src/index.css
@@ -2,22 +2,15 @@
 
 
 @layer components {
-    .stock-card {
-    @apply 
-    relative h-full isolate
-    rounded-lg
+  .mini-terminal-watchlist{
+    @apply rounded-2xl p-6
+    bg-[#131c2a]/90
     border border-white/10
-    bg-white/5
-    p-4
-    transition-all duration-300 ease-out
-    will-change-transform
-    hover:scale-[1.075]
-    hover:cursor-pointer
-    hover:border-blue-500
-    hover:shadow-[0_0_0_1px_rgba(59,130,246,0.5),0_20px_40px_-20px_rgba(0,0,0,0.9)]
-
-    }
- 
+    shadow-[0_18px_60px_-30px_rgba(0,0,0,0.9)]
+    transition duration-300 ease-out will-change-transform
+    hover:scale-[1.02]
+    hover:border-blue-500/60;
+  }
 }
 
 
